Cinnamon - bugfix - popup-menu-item icon padding/spacing

--- a/src/_sass/cinnamon/_common.scss
+++ b/src/_sass/cinnamon/_common.scss
@@ -88,6 +88,7 @@ StScrollView {
 // individual menu entries are themed here
 .popup-menu-item {
 	padding: 0.4em 4px;
+	spacing: 0.4em;
 	transition-duration: $shorter_duration;
   &:active {
     background-color: $track_color;
@@ -121,7 +122,6 @@ StScrollView {
 }
 .popup-menu-icon {
   icon-size: 1.14em;
-  padding: 0px 4px;
 }
 .popup-menu-item-dot {
 }
